# hop

./: .gitignore  LICENSE  README.md  cool.md  hello_world.py  hop.py  pacer.py  pyproject.toml  setup.py
.github/workflows/: pylint.yml
hop/: __about__.py  __init__.py  __main__.py  app.py  hop.py  hop_functions.py  icons.py  key_test.py  main.py
src/hop/: __about__.py  __main__.py  app.py  hop_functions.py  icons.py
unix/: hop  pacer
windows/: hop.bat
