[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "hop"
version = "2.0"
description = "An intuitive and fast terminal file browser"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "send2trash",
    "rich",
]

[project.scripts]
hop = "hop.main:run_app"