[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hop"
version = "2.0"
description = "An intuitive and fast terminal file browser"
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "send2trash",
    "rich",
    "getch",
]
dynamic = ["version"]

[project.scripts]
hop = "hop.main:run_app"
[tool]
